crates/shell/src/shells/snapshots/starbase_shell__shells__xonsh__tests__formats_context_change_hook.snap
---
source: crates/shell/src/shells/xonsh.rs
expression: Xonsh.format_hook(hook).unwrap()
---
def _starbase_hook(olddir=None, newdir=None, **kwargs):
    output = $(starbase hook xonsh)
    if output:
        execx(output)

def _starbase_deactivate():
    output = $(starbase deactivate xonsh)
    if output:
        execx(output)
    for event in (events.on_chdir, events.on_pre_prompt):
        for handler in list(event):
            if getattr(handler, '__name__', '') == '_starbase_hook':
                event.discard(handler)
    __xonsh__.ctx.pop('_starbase_hook', None)
    __xonsh__.ctx.pop('_starbase_deactivate', None)

# Re-sourcing creates new function objects, so deduplicate by name
if not any(getattr(handler, '__name__', '') == '_starbase_hook' for handler in events.on_chdir):
    events.on_chdir(_starbase_hook)

if not any(getattr(handler, '__name__', '') == '_starbase_hook' for handler in events.on_pre_prompt):
    events.on_pre_prompt(_starbase_hook)

# execx() does not evaluate into the shell namespace, so export both functions
__xonsh__.ctx['_starbase_hook'] = _starbase_hook
__xonsh__.ctx['_starbase_deactivate'] = _starbase_deactivate
