crates/shell/src/shells/snapshots/starbase_shell__shells__xonsh__tests__formats_unregister_handlers_hook.snap
---
source: crates/shell/src/shells/xonsh.rs
expression: "Xonsh.format_hook(Hook::UnregisterHandlers\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
# A comprehension rather than a loop, so that the names it walks do not outlive
# it in the shell's namespace
[
    event.discard(handler)
    for event in (events.on_chdir, events.on_pre_prompt)
    for handler in list(event)
    if getattr(handler, '__name__', '') == '_starbase_hook'
]
